src/componensts/users/profile/image/index.module.css
.list-images {
  display: flex;
  flex-wrap: wrap;
  padding: 0;
  padding-bottom: 50px;
}

.image-item {
  flex: 33%;
  max-width: 28%;
  margin: 7px;
  position: relative;
}

.image-item img {
  margin-top: 8px;
  vertical-align: middle;
  width: 100%;
  border-radius: 10px;
}
.delete-icon {
  color: rgb(138, 138, 138);
  cursor: pointer; 
}

.empty-image-item i, .delete-icon {
  position: absolute;
  font-size: 25px;
  bottom: -17.5px;
  right: -12px;
}

.empty-image-item {
  flex: 33%;
  max-width: 28%;
  margin: 7px;
  border: 3px dotted rgb(138, 138, 138);
  border-radius: 10px;
  position: relative;
  cursor: pointer;
}

.empty-image-item i {
  color: rgb(203, 8, 8);
}
.empty-image-item input[type="file"] {
  display: none;
}

